# icpio

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: cli.rs  generate
